# survivors-game

./: .gitignore  Cargo.toml  TODO.txt
assets/levels/: basic.ldtk
src/: asset_loader.rs  camera.rs  collision.rs  combat.rs  enemies.rs  ghost.rs  health.rs  levels.rs  main.rs  map.rs  menu.rs  movement.rs  player.rs  schedule.rs
