[package]
name = "survivors-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    # "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    # "bevy_ui",
    "bevy_winit",
    # "default_font",
    "multi-threaded",
    "png",
    # "tonemapping_luts",
    "x11",
]}
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
